# Photolab

./: .gitignore  README.md
misc/: README copy.md
src/: CMakeLists.txt  Controller.h  Makefile  docs.tex  main.cc
src/common/: Matrix.h  Observable.h  Observer.h
src/forms/: CustomMatrixDialog.ui  CustomMatrixDialog_ui.py  MainWindow.ui  MainWindow_ui.py
src/model/: Filter.cc  Filter.h  Model.cc  Model.h
src/tests/: CMakelists.txt  tests.cc
src/view/: CustomLabel.h  CustomMatrixDialog.cc  CustomMatrixDialog.h  CustomSpinBox.h  HistoryWidget.cc  HistoryWidget.h  MainWindow.cc  MainWindow.h
